@@ -41,7 +41,11 @@ namespace Giver
 			this.service = service;
 
 	        HBox hbox = new HBox(false, 10);
-			Gtk.Image image = new Gtk.Image(Utilities.GetIcon("giver-48", 48));
+			Gtk.Image image;			
+			if(service.Photo != null)
+				image = new Gtk.Image(service.Photo);
+			else
+			 	image = new Gtk.Image(Utilities.GetIcon("giver-48", 48));
 			hbox.PackStart(image, false, false, 0);
 			VBox vbox = new VBox();
 			hbox.PackStart(vbox, false, false, 0);
